--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textStyle="bold|italic"
-        android:textSize="25dp"
+        android:textSize="30dp"
         android:gravity="center" />
 
     <Button
@@ -106,7 +106,9 @@
                 <TextView
                     android:layout_width="150dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="15sp"/>
+                    android:textSize="15sp"
+                    android:text="OPIS"
+                    android:id="@+id/" />
                     android:id="@+id/textView18" />
 
                 <TextView
@@ -120,8 +122,8 @@
     </ScrollView>
 
     <Button
-        android:layout_width="114dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:text="@string/DNW2_cofnij"
         android:id="@+id/Wstecz"
         android:layout_x="13dp"
@@ -136,8 +138,8 @@
         android:layout_marginStart="36dp" />
 
     <Button
-        android:layout_width="123dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:text="@string/DNW2_Zatwierdź"
         android:id="@+id/Zatwierdź_wyzwanie"
         android:layout_x="132dp"
