--- a/android-client/android-client/src/main/res/layout/activity_logowanie.xml
+++ b/android-client/android-client/src/main/res/layout/activity_logowanie.xml
@@ -92,14 +92,14 @@
         android:textColor="#ff000000" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:text="@string/Zatwierdz"
         android:id="@+id/OK"
         android:onClick="doLogin"
         android:layout_below="@+id/Zapamietac"
-        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/Zapamietac" android:layout_toLeftOf="@+id/Zapamietac"/>
+        android:layout_alignRight="@+id/Zapamietac"
+        android:layout_alignEnd="@+id/Zapamietac" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -113,10 +113,11 @@
 
     <Button
         android:id="@+id/rejestracja"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rejestracja" android:layout_alignBottom="@+id/OK"
-        android:layout_alignRight="@+id/Zapamietac"
-        android:layout_alignParentLeft="false"/>
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:text="Rejestracja"
+        android:layout_alignTop="@+id/OK"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
