Uzupełnienie javadoców, do tego poprawka jednego buga przez którego się nie budowało, ale nie mam telefonu by sprawdzić czy to wystarcza

--- a/android-client/android-client/src/main/res/layout/activity_koordynaty_mapa2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_koordynaty_mapa2.xml
@@ -4,7 +4,7 @@
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     tools:context="pl.lodz.p.ftims.geocaching.GUI.Koordynaty_mapa"
-    android:background="@drawable/xy">
+    android:background="@drawable/tlo_aplikacja">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
