--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
@@ -58,67 +58,305 @@
             android:layout_height="wrap_content">
 
             <TableRow
+                android:id="@+id/tableRow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:text="NR"
+                    android:id="@+id/textView18" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:text="OPIS"
+                    android:id="@+id/textView20"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:text="KORDY"
+                    android:id="@+id/textView21" />
+            </TableRow>
+
+            <TableRow
                 android:id="@+id/tableRow1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
                 android:baselineAligned="false">
-                <!--
-                                <TextView
-                                    android:id="@+id/textView1"
-                                    android:layout_width="warp_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_column="1"
-                                    android:layout_weight="1"
-                                    android:paddingRight="10dp"
-                                    android:text="NR"
-                                    android:textAppearance="?android:attr/textAppearanceLarge"
-                                    android:textSize="15sp"/>
 
-                                <TextView
-                                    android:id="@+id/textView11"
-                                    android:layout_width="warp_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_column="2"
-                                    android:layout_weight="1"
-                                    android:paddingRight="10dp"
-                                    android:text="OPIS"
-                                    android:textAppearance="?android:attr/textAppearanceLarge"
-                                    android:textSize="15sp"/>
-
-
-                                <TextView
-                                    android:layout_width="0dp"
-                                    android:layout_height="wrap_content"
-                                    android:textAppearance="?android:attr/textAppearanceLarge"
-                                    android:text="ODLEGLOSC"
-                                    android:id="@+id/textView12"
-                                    android:layout_column="6"
-                                    android:layout_weight="1" />
-                  -->
                 <TextView
-                    android:layout_width="30dp"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:text="NR"
                     android:id="@+id/textView17" />
 
                 <TextView
-                    android:layout_width="150dp"
+                    android:layout_width="180dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="15sp"
-                    android:text="OPIS"
-                    android:id="@+id/" />
+                    android:id="@+id/textView18" />
                     android:id="@+id/textView18" />
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:text="KORDY"
                     android:id="@+id/textView19" />
             </TableRow>
 
-            </TableLayout>
+            <TableRow
+                android:id="@+id/tableRow11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView22" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView23"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView24" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView25" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView26"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView27" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView28" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView29"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView30" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView31" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView32"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView33" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow15"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView34" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView35"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView36" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView37" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView38"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView39" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow17"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView40" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView41"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView42" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView43" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView44"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView45" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow19"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:showDividers="middle"
+                android:onClick="Edytuj_wskazowke"
+                android:baselineAligned="false" >
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView46" />
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="15sp"
+                    android:id="@+id/textView47"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView48" />
+            </TableRow>
+
+        </TableLayout>
     </ScrollView>
 
     <Button
