--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
@@ -98,7 +98,8 @@
                 <TextView
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView17" />
+                    android:id="@+id/textView17"
+                    android:text="1" />
 
                 <TextView
                     android:layout_width="180dp"
@@ -125,7 +126,8 @@
                 <TextView
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView22" />
+                    android:id="@+id/textView22"
+                    android:text="2" />
 
                 <TextView
                     android:layout_width="180dp"
@@ -152,7 +154,8 @@
                 <TextView
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView25" />
+                    android:id="@+id/textView25"
+                    android:text="3" />
 
                 <TextView
                     android:layout_width="180dp"
