--- a/android-client/android-client/src/main/res/layout/activity_koordynaty_mapa2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_koordynaty_mapa2.xml
@@ -6,16 +6,15 @@
     tools:context="pl.lodz.p.ftims.geocaching.GUI.Koordynaty_mapa"
     android:background="@drawable/tlo_aplikacja">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <fragment
         android:layout_width="350dp"
         android:layout_height="350dp"
         android:id="@+id/map"
-        tools:context=".MapActivity"
+        tools:context=".Koordynaty_mapa"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_x="18dp"
         android:layout_y="17dp" />
-
+    <!--tools:context=".MapActivity"-->
     <Button
         android:layout_width="120dp"
         android:layout_height="50dp"
