--- a/android-client/android-client/src/main/res/layout/activity_lista__wskazowek.xml
+++ b/android-client/android-client/src/main/res/layout/activity_lista__wskazowek.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="30dp"
                 android:paddingRight="16dp"
                 android:text="LP"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
