--- a/android-client/android-client/src/main/res/layout/activity_lista__wskazowek.xml
+++ b/android-client/android-client/src/main/res/layout/activity_lista__wskazowek.xml
@@ -5,6 +5,10 @@
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true" 
+    android:paddingBottom="16sp"
+    android:paddingLeft="16sp"
+    android:paddingRight="16sp"
+    android:paddingTop="16sp"
     android:background="@drawable/tlo_aplikacja">
 
     <TableLayout
@@ -30,6 +34,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nazwa"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        </TableRow>
+        
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="Wybierz_wskazowke" >
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="30dp"
+                android:paddingRight="16dp"
+                android:text="-1"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TEST"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
         </TableRow>
