--- a/android-client/android-client/src/main/res/menu/lista_dostepnych_wyzwan.xml
+++ b/android-client/android-client/src/main/res/menu/lista_dostepnych_wyzwan.xml
@@ -3,10 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pl.lodz.p.ftims.geocaching.Lista_dostepnych_wyzwan" >
 
+    <!-- Profil -->
+        <item
+            android:id="@+id/ekran_Profil"
+            android:title="@string/ekran_Profil"
+            android:orderInCategory="100" />
+
+    <!-- Ranking -->
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:id="@+id/ekran_Ranking"
+        android:title="@string/ekran_Ranking"
+        android:orderInCategory="101" />
+
+    <!-- Mapa -->
+    <item
+        android:id="@+id/ekran_Mapa"
+        android:title="@string/ekran_Mapa"
+        android:orderInCategory="102" />
+
+    <!-- Stwórz wyzwanie -->
+    <item
+        android:id="@+id/ekran_Stworz_wyzwanie"
+        android:title="@string/ekran_Stworz_wyzwanie"
+        android:orderInCategory="103" />
 
 </menu>
