Naprawiłem błędy, dodałem listę wyzwań i trochę z listy wskazówek. Nie jest najgorzej.

--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_1.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_1.xml
@@ -19,6 +19,7 @@
         android:layout_toRightOf="@+id/Zdjecie"
         android:layout_x="220dp"
         android:layout_y="400dp"
+        android:onClick="przejdzDalej"
         android:text="@string/DNW_Przycisk" />
 
     <LinearLayout
